--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,13 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "argon2": "^0.27.1",
     "cookie-parser": "~1.4.5",
     "debug": "~4.3.1",
+    "dotenv": "^8.2.0",
     "express": "~4.17.1",
-    "morgan": "~1.10.0"
+    "morgan": "~1.10.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2"
   }
 }
