--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,7 @@ DB_HOST = localhost
 DB_USER = root
 DB_PASSWORD = root123
 DB_NAME = auth-example
+
+# JWT
+TOKEN_SECRET = 03984327858991094848084
+JWT_COOKIE_EXPIRE = 30
