--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,12 @@
     "debug": "~4.3.1",
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.10.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "locus": "2.0.4"
   }
 }
