--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "argon2": "^0.27.1",
     "cookie-parser": "~1.4.5",
+    "cors": "^2.8.5",
     "debug": "~4.3.1",
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
@@ -17,7 +18,5 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
   },
-  "devDependencies": {
-    "locus": "2.0.4"
-  }
+  "devDependencies": {}
 }
