--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 DB_HOST = localhost
 DB_USER = root
 DB_PASSWORD = root123
-DB_NAME = auth-example
+DB_NAME = sdit
 
 # JWT
 JWT_SECRET = 03984327858991094848084
