--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,11 @@
-DB_HOST = localhost
-DB_USER = root
-DB_PASSWORD = root123
+DB_HOSTNAME = localhost
+DB_USER = rpb99
+DB_PASSWORD = 12345678
 DB_NAME = sdit
 
 # JWT
 JWT_SECRET = 03984327858991094848084
 JWT_COOKIE_EXPIRE = 30
+JWT_EXPIRE_IN = 1h
+
+NODE_ENV=development
