--- a/server/package.json
+++ b/server/package.json
@@ -7,16 +7,18 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "argon2": "^0.27.1",
+    "argon2": "^0.28.2",
     "cookie-parser": "~1.4.5",
     "cors": "^2.8.5",
     "debug": "~4.3.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "~4.17.1",
+    "fastest-validator": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.10.0",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {}
 }
