--- a/server/.env
+++ b/server/.env
@@ -5,7 +5,9 @@ DB_NAME = sdit
 
 # JWT
 JWT_SECRET = 03984327858991094848084
-JWT_COOKIE_EXPIRE = 30
-JWT_EXPIRE_IN = 1h
+JWT_COOKIE_EXPIRE = 1
+JWT_EXPIRE_IN = 1d
+
+MAX_SIZE=2000
 
 NODE_ENV=development
