--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "fastest-validator": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
