--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,7 @@
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  }
 }
